# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.9
#

2005-06-01 13:29:32 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-67

    Summary:
      xml, move "XHTML.Document.to_text" to "XML.Document"
    Revision:
      itools--main--0.9--patch-67


    modified files:
     Changelog xhtml/XHTML.py xml/XML.py


2005-05-30 18:59:51 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-66

    Summary:
      catalog, fix un-index
    Revision:
      itools--main--0.9--patch-66


    modified files:
     Changelog catalog/IIndex.py


2005-05-30 18:28:02 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-65

    Summary:
      catalog, fix indexing
    Revision:
      itools--main--0.9--patch-65


    modified files:
     Changelog catalog/IIndex.py


2005-05-29 12:56:45 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-64

    Summary:
      catalog, optimize, merge "documents" and "positions" resources
    Revision:
      itools--main--0.9--patch-64


    modified files:
     Changelog catalog/IIndex.py


2005-05-28 18:20:08 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-63

    Summary:
      catalog, optimize index positions resource
    Revision:
      itools--main--0.9--patch-63

    Change the layout of the positions resource, now it is a made of
    variable size blocks.
    
    As result the different operations, index, unindex and search are
    much faster.

    modified files:
     Changelog catalog/IIndex.py


2005-05-28 17:55:24 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-62

    Summary:
      catalog, fix profiling script
    Revision:
      itools--main--0.9--patch-62


    modified files:
     Changelog catalog/prof.py


2005-05-28 12:53:49 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-61

    Summary:
      merge from the 0.8 branch
    Revision:
      itools--main--0.9--patch-61

    Patches applied:
    
     * jdavid@itaapy.com--public/itools--main--0.8--patch-95