@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.9
 #
 
+2005-06-01 19:03:49 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-68
+
+    Summary:
+      xhtml, improve naming style for some methods, add "get_content"
+    Revision:
+      itools--main--0.9--patch-68
+
+
+    modified files:
+     Changelog html/HTML.py xml/XML.py
+
+
 2005-06-01 13:29:32 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-67
 
     Summary:
